--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -63,7 +63,9 @@
       }
 
       .container {
-        width: 105rem;
+        min-width: 33rem;
+        max-width: 105rem;
+
         margin: 0 auto;
       }
 
