--- a/templates/template-overview.html
+++ b/templates/template-overview.html
@@ -63,8 +63,7 @@
       }
 
       .container {
-        min-width: 33rem;
-        max-width: 105rem;
+        width: 105rem;
         margin: 0 auto;
       }
 
