--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -63,9 +63,7 @@
       }
 
       .container {
-        min-width: 33rem;
-        max-width: 105rem;
-
+        width: 105rem;
         margin: 0 auto;
       }
 
